<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alwaysDrawnWithCache="false"
    android:scrollbarStyle="outsideInset">


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:hint="@string/button0"
        android:layout_marginTop="40dp"
        android:textSize="75sp"
        android:layoutDirection="rtl">
    </EditText>

    <Button
        android:id="@+id/button0"
        android:layout_width="192dp"
        android:layout_height="100dp"
        android:text="@string/button0"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/dotButton"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1"/>

    <Button
        android:id="@+id/dotButton"
        android:layout_width="95dp"
        android:layout_height="100dp"
        android:text="@string/dotButton"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/equalButton"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button0"
        app:layout_constraintTop_toBottomOf="@id/button3"/>

    <Button
        android:id="@+id/equalButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/equalButton"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/dotButton"
        app:layout_constraintTop_toBottomOf="@id/addButton"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/button1"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button4"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/button3"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/addButton"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/button6"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/button4"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/button5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button7"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/button5"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button8"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/button6"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/subtractButton"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button9"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/button7"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clearButton"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/button8"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@id/clearButton"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/button9"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/multiplyButton"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@id/clearButton"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/addButton"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@id/subtractButton"/>

    <Button
        android:id="@+id/subtractButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/subtractButton"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintTop_toBottomOf="@id/multiplyButton"/>

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/multiplyButton0"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintTop_toBottomOf="@id/divideButton"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/button2"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/button3"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/button5"/>

    <Button
        android:id="@+id/clearButton"
        android:layout_width="290dp"
        android:layout_height="99dp"
        android:text="@string/clearButton"
        android:layout_marginTop="120dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/divideButton"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText"/>

    <Button
        android:id="@+id/divideButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/divideButton"
        android:layout_marginTop="120dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/clearButton"
        app:layout_constraintTop_toBottomOf="@id/editText"/>


</androidx.constraintlayout.widget.ConstraintLayout>